# information

./: .coveragerc  README.md  azure-pipelines.yml  noxfile.py  pyproject.toml  setup.py
doc/: README.md
doc/source/: .conf.py.swp  .index.rst.swp  conf.py  index.rst  informant.estimators.rst  informant.generators.rst  informant.md.rst  informant.plots.rst  informant.probability.rst  informant.rst  informant.utils.rst  informant.utils.utils.rst  modules.rst
informant/: __init__.py  estimators.py  generators.py  md.py  plots.py  probability.py
informant/tests/: requirements.txt  test_ccdi_estimators.py  test_coupledmaplattice.py  test_crossoverchannel.py  test_estimators.py  test_generators.py  test_lowlevel.py  test_md.py  test_probability.py  utils.py
informant/utils/: utils.py
information/: __init__.py  api.py  estimators.py  information.py  probability.py
information/tests/: test_crossoverchannel.py  test_estimators.py  test_probability.py
information/utils/: utils.py
notebooks/: asymmetric ising chain transfer entropy.ipynb  glauber dynamics parameter grid analysis-PAPER-FIG3-S1.ipynb  glauber dynamics simple analysis-PAPER-FIG2.ipynb  ornstein uhlenbeck-PAPER_Fig4.ipynb
